--- a/index.html
+++ b/index.html
@@ -54,28 +54,29 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For Pallavi 💖</title>
+<title>Happy Birthday, Pallavi! 🎉💖</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;600&display=swap');
 
   body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fad0c4);
+    background: #ffe6f0;
     font-family: 'Poppins', sans-serif;
     text-align: center;
-    color: #fff;
+    overflow: hidden;
   }
 
   h1 {
     font-family: 'Great Vibes', cursive;
     font-size: 4rem;
-    margin-top: 50px;
-    text-shadow: 2px 2px #ff3399;
+    margin-top: 30px;
+    color: #d6336c;
+    text-shadow: 2px 2px #ffa3c4;
   }
 
   #magicBtn {
+    margin-top: 20px;
     font-size: 28px;
     padding: 18px 40px;
     background: #ff66b2;
@@ -94,29 +95,34 @@
     background: #ff3399;
   }
 
-  .heart {
-    position: absolute;
-    font-size: 24px;
-    animation: rise 4s infinite ease-in;
-    opacity: 0.8;
+  .birthday-pics img {
+    width: 70%;
+    max-width: 400px;
+    margin: 15px auto;
+    border-radius: 15px;
+    box-shadow: 0 0 20px rgba(255, 102, 178, 0.5);
+    animation: float 6s ease-in-out infinite;
   }
 
-  @keyframes rise {
-    0% { transform: translateY(0) scale(1); opacity: 0.8; }
-    100% { transform: translateY(-800px) scale(1.8); opacity: 0; }
+  @keyframes float {
+    0%,100% { transform: translateY(0); }
+    50% { transform: translateY(-10px); }
   }
 </style>
 </head>
-
 <body>
 
-<h1>✨💖 For Pallavi 💖✨</h1>
-<button id="magicBtn">Tap the Magic! ✨</button>
+<h1>✨🎂 Happy Birthday, Pallavi! 🎂✨</h1>
+<p style="font-size: 1.2rem; color:#d6336c;">Tap below for your magical birthday surprise! 🌟</p>
 
-<!-- confetti -->
+<button id="magicBtn">🎈 Tap for Magic! 🎈</button>
+
+<div class="birthday-pics" id="pics"></div>
+
+<!-- confetti + particle library -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
 
-<!-- audio -->
+<!-- music -->
 <audio id="bgMusic" loop>
   <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_a790affb6d.mp3?filename=happy-joy-music-10834.mp3" type="audio/mpeg">
 </audio>
@@ -124,44 +130,42 @@
 <script>
   const button = document.getElementById("magicBtn");
   const music = document.getElementById("bgMusic");
+  const picsDiv = document.getElementById("pics");
+
+  const images = [
+    "https://images.pexels.com/photos/1157082/pexels-photo-1157082.jpeg",
+    "https://images.pexels.com/photos/2072169/pexels-photo-2072169.jpeg",
+    "https://images.pexels.com/photos/3028993/pexels-photo-3028993.jpeg"
+  ];
 
   button.addEventListener("click", function() {
-    // start music
     music.play();
 
-    // confetti blast
     confetti({
       particleCount: 300,
       spread: 180,
-      origin: { y: 0.6 }
+      origin: { y: 0.7 }
     });
 
-    // hearts animation
-    for (let i = 0; i < 40; i++) {
-      createHeart();
-    }
+    showBirthdayPics();
 
-    // big message reveal
     setTimeout(() => {
-      alert("✨🌸 Hey Pallavi! 🌸✨\nThis is for YOU — with lots of love! 💖");
-    }, 600);
+      alert("✨🌸 Dear Pallavi, Happy Birthday! 🌸✨\nWishing you joy, love, and magical moments! 💖");
+    }, 700);
   });
 
-  function createHeart() {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.style.left = Math.random() * window.innerWidth + "px";
-    heart.style.fontSize = (20 + Math.random() * 30) + "px";
-    heart.style.color = `hsl(${Math.random()*360}, 100%, 75%)`;
-    heart.innerText = "💖";
-    document.body.appendChild(heart);
-
-    setTimeout(() => {
-      heart.remove();
-    }, 4000);
+  function showBirthdayPics() {
+    picsDiv.innerHTML = "";
+    images.forEach(src => {
+      const img = document.createElement("img");
+      img.src = src;
+      picsDiv.appendChild(img);
+    });
   }
 </script>
 
 </body>
 </html>
+
+
 
