--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday, Pallavi! 🎉💖</title>
+<title>Happy Birthday, Dear! 🎉💖</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;600&display=swap');
 
@@ -66,7 +66,7 @@
 </head>
 <body>
 
-<h1>🎂 Happy Birthday, Pallavi! 🎀</h1>
+<h1>🎂 Happy Birthday, Dear! 🎀</h1>
 
 <!-- Cute Photo -->
 <img id="photo" src="YOUR_PHOTO_URL_HERE" alt="You + Pallavi">
@@ -134,3 +134,4 @@
 
 </body>
 </html>
+
